mobile-nav not showing fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,7 @@ section{
     border: none;
     cursor: pointer;
     color: #F7F7F8;
-    padding-left: 280px;
+    padding-left: 200px;
   }
   
   /* Mobile Navigation */
